--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,114 @@
-lxml==4.6.3
-requests==2.25.1
+absl-py==0.12.0
+argon2-cffi==20.1.0
+astunparse==1.6.3
+async-generator==1.10
+attrs==21.2.0
+backcall==0.2.0
 beautifulsoup4==4.10.0
+bleach==3.3.0
+bs4==0.0.1
+cached-property==1.5.2
+cachetools==4.2.1
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+clang==5.0
+click==8.0.1
+colorama==0.4.4
+contextvars==2.4
+cycler==0.10.0
+Cython==0.29.24
+dataclasses==0.8
+decorator==5.0.9
+defusedxml==0.7.1
+docopt==0.6.2
+entrypoints==0.3
+fastcore==1.3.26
 Flask==2.0.1
+flatbuffers==1.12
+gast==0.4.0
+google-auth==1.29.0
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+grpcio==1.37.0
 gunicorn==20.1.0
+h5py==3.1.0
+humanize==3.11.0
+idna==2.10
+immutables==0.16
+importlib-metadata==4.5.0
+ipykernel==5.5.5
+ipython==7.16.1
+ipython-genutils==0.2.0
 itsdangerous==2.0.1
-Jinja2==3.0
+jedi==0.18.0
+Jinja2==2.11.3
+joblib==1.0.1
+jsonschema==3.2.0
+jupyter-client==6.1.13
+jupyter-core==4.7.1
+jupyter-http-over-ws==0.0.8
+jupyterlab-pygments==0.1.2
+keras==2.6.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+lxml==4.6.3
+Markdown==3.3.4
 MarkupSafe==2.0.1
-Werkzeug==2.0.1
+matplotlib==3.3.4
+mistune==0.8.4
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.0
 numpy==1.19.5
-scipy==1.5.4
+oauthlib==3.1.0
+opt-einsum==3.3.0
+packaging==20.9
+pandas==0.25.3
+pandocfilters==1.4.3
+parso==0.8.2
+patsy==0.5.1
+pickleshare==0.7.5
+Pillow==8.3.2
+pipreqs==0.4.10
+pmdarima==1.8.2
+prometheus-client==0.11.0
+prompt-toolkit==2.0.1
+protobuf==3.15.8
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+Pygments==2.9.0
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytz==2021.1
+pywin32==301
+pywinpty==1.1.1
+pyzmq==22.1.0
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
 scikit-learn==0.24.2
-matplotlib>=1.0
+scipy==1.5.4
+Send2Trash==1.5.0
+six==1.15.0
+sklearn==0.0
+soupsieve==2.2.1
+statsmodels==0.12.2
+termcolor==1.1.0
+terminado==0.10.0
+testpath==0.5.0
+threadpoolctl==2.2.0
+tornado==6.1
+traitlets==4.3.3
+typing-extensions==3.7.4.3
+urllib3==1.26.4
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.1
+wrapt==1.12.1
+yarg==0.1.9
+zipp==3.4.1
