--- a/requirements.txt
+++ b/requirements.txt
@@ -84,7 +84,7 @@ pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2021.1
-pywin32==301
+pypiwin32==223
 pywinpty==1.1.1
 pyzmq==22.1.0
 requests==2.25.1
