--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ lxml==4.6.3
 matplotlib==3.3.4
 numpy==1.19.5
 oauthlib==3.1.0
-pandas==0.25.3
+pandas>=0.19
 pipreqs==0.4.10
 requests==2.25.1
 requests-oauthlib==1.3.0
