--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,20 @@ bs4==0.0.1
 Flask==2.0.1
 google-auth==1.29.0
 google-auth-oauthlib==0.4.4
-gunicorn==20.1.0
-Jinja2==2.11.3
 keras==2.6.0
 lxml==4.6.3
-matplotlib==3.3.4
-numpy==1.19.5
 oauthlib==3.1.0
-pandas>=0.19
 pipreqs==0.4.10
 requests==2.25.1
 requests-oauthlib==1.3.0
-scikit-learn==0.24.2
-scipy==1.5.4
 urllib3==1.26.4
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+Werkzeug==0.15.5
+numpy>=1.9.2
+scipy>=0.15.1
+scikit-learn>=0.18
+matplotlib>=1.4.3
+pandas>=0.19
