--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ numpy==1.19.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
 packaging==20.9
-pandas==0.25.3
+pandas>=0.19
 pandocfilters==1.4.3
 parso==0.8.2
 patsy==0.5.1
